# RestaurantAIServices

./: readme.md
DemandForecastService/: .env  .gitignore  README.md  app.py  main.py  pyproject.toml
DemandForecastService/api/: db.py  endpoints.py  models.py  schemas.py  service.py  test.py
DemandForecastService/api/ml_pipeline/: config.py  extractor.py  feast_store.py  models.py  notification_service.py  orchestrator.py  predictor.py  preprocessor.py  trainer.py  utils.py
DemandForecastService/feast/: feature_store.yaml
DemandForecastService/feast/data/: registry.db
DemandForecastService/ml_pipeline/: config.py  extractor.py  feast_store.py  models.py  notification_service.py  orchestrator.py  predictor.py  preprocessor.py  trainer.py  utils.py
DemandForecastService/ml_pipeline/notebooks/: prophet.ipynb
DemandForecastService/mlruns/0/: meta.yaml
DemandForecastService/mlruns/185463488967656291/: meta.yaml
DemandForecastService/prophet_model/: MLmodel  model.pr
DemandForecastService/wandb/: latest-run
DemandForecastService/wandb/run-20250722_104831-1is1as4h/: run-1is1as4h.wandb
DemandForecastService/wandb/run-20250722_110216-kx44dddq/: run-kx44dddq.wandb
DemandForecastService/wandb/run-20250722_110803-mukc1n95/: run-mukc1n95.wandb
DemandForecastService/wandb/run-20250722_114804-uwqinrr3/: run-uwqinrr3.wandb
DemandForecastService/wandb/run-20250722_115507-0g1id1r8/: run-0g1id1r8.wandb
DemandForecastService/wandb/run-20250722_122613-uel0nahi/: run-uel0nahi.wandb
DemandForecastService/wandb/run-20250722_123031-bh32atpa/: run-bh32atpa.wandb
(+101 files in other folders)
