[project]
name = "DemandForecastService"
version = "0.1.0"
description = "Microservice for Hobwise Demand Forecasting Inference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi>=1.17.1",
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "mlflow>=3.1.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "wandb>=0.21.0",
    "websockets>=15.0.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
mlflow = { cmd = "mlflow server --host 127.0.0.1 --port 8000"}
api = {cmd = "uvicorn main:app --host 127.0.0.1 --port 8080"}
